tried to make java faster, din't pan out